# bmm-multitask-learning

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sparse_bayesian_regression.py
.github/workflows/: doc_deploy.yaml  only_test.yaml  test_and_deploy.yaml  test_run.yaml
bmm-multitask-learning/variational/: distr.py  elbo.py
bmm_multitask/: dataset.py  features.py  sparse_bayesian_regression.py
bmm_multitask/modeling/: predict.py
bmm_multitask_learning/: __init__.py  plots.py
bmm_multitask_learning/coalescent/: coalescent_inference.py  coalescent_learner.py  inverse_wishart.py  parameters_cov.py  plot_coalescent.py  task_classes.py  utils.py
bmm_multitask_learning/modeling/: train.py
bmm_multitask_learning/task_clustering/: MultiTask_Algo.py  MultiTask_Base_Class.py
bmm_multitask_learning/variational/: distr.py  elbo.py
coalescent/coalescent_example/: index.html
coalescent/hooks/: index.html
coalescent/reference/: index.html
coverage/: class_index.html  covindex.html  function_index.html  index.html  status.json  z_1780e98ebd0cb510___init___py.html  z_79e16954cfab647b_MultiTask_Algo_py.html  z_79e16954cfab647b_MultiTask_Base_Class_py.html  z_79e16954cfab647b___init___py.html  z_91cf274267501ce5___init___py.html  z_91cf274267501ce5_coalescent_inference_py.html  z_91cf274267501ce5_coalescent_learner_py.html  z_91cf274267501ce5_inverse_wishart_py.html  z_91cf274267501ce5_parameters_cov_py.html  z_91cf274267501ce5_plot_coalescent_py.html  z_91cf274267501ce5_task_classes_py.html  z_91cf274267501ce5_utils_py.html  z_91eb4e57b6d43eb4___init___py.html  z_91eb4e57b6d43eb4_sparse_bayesian_regression_py.html  z_f8e636714fc16c83___init___py.html  z_f8e636714fc16c83_distr_py.html  z_f8e636714fc16c83_elbo_py.html
docs/: .gitignore  index.md  mkdocs.yml
docs/coalescent/: hooks.py  reference.md
docs/docs/: index.md
docs/javascripts/: hooks.py
docs/sbmtl/: hooks.py  reference.md
docs/source/: conf.py  index.rst
docs/task_clustering/: hooks.py  reference.md
docs/variational/: hooks.py  intro.md  reference.md
examples/: demo.ipynb
examples/coalescent/: coalescent_example.ipynb
htmlcov/: class_index.html  function_index.html  z_1780e98ebd0cb510___init___py.html  z_79e16954cfab647b_MultiTask_Algo_py.html  z_79e16954cfab647b_MultiTask_Base_Class_py.html  z_79e16954cfab647b___init___py.html  z_91cf274267501ce5___init___py.html  z_91cf274267501ce5_coalescent_inference_py.html  z_91cf274267501ce5_coalescent_learner_py.html  z_91cf274267501ce5_inverse_wishart_py.html  z_91cf274267501ce5_parameters_cov_py.html  z_91cf274267501ce5_plot_coalescent_py.html  z_91cf274267501ce5_task_classes_py.html  z_91cf274267501ce5_utils_py.html  z_91eb4e57b6d43eb4___init___py.html  z_91eb4e57b6d43eb4_sparse_bayesian_regression_py.html  z_f8e636714fc16c83___init___py.html  z_f8e636714fc16c83_distr_py.html  z_f8e636714fc16c83_elbo_py.html
javascripts/hooks/: index.html
notebooks/: experiment_testing_method.ipynb
search/: search_index.json
tests/: test_sparse_bayesian_regression.py
(+29 files in other folders)
