[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.poetry]
name = "bmm_multitask"
version = "0.0.1"
description = "algos for multitask"
authors = ["xm"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^2.2.3"
pyro-ppl = "^1.9.1"
tabulate = "^0.9.0"
loguru = "^0.7.3"
dotenv = "^0.9.9"
scipy = "^1.15.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
matplotlib = "^3.10.1"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["bmm_multitask"]
force_sort_within_sections = true


