[tool.poetry]
name = "bmm_multitask_learning"
version = "0.1.0"
description = "algos for multitask learning"
authors = ["sem-k32 <kirill.semkin32@mail.ru>"]
readme = "README.md"
include = [
    { path = "bmm_multitask_learning" }
]


[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"
numpy = "^2.2.3"
pandas = "^2.2.3"
omegaconf = "^2.3.0"
pipe = "^2.2"
lightning = "^2.5.0.post0"
pyro-ppl = "^1.9.1"
torchmetrics = "^1.7.0"
plotly = "^6.0.1"
nbconvert = "^7.16.6"
tensorboard = "^2.19.0"
matplotlib = "^3.10.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[tool.poetry.group.doc.dependencies]
mkdocstrings = {extras = ["python"], version = "^0.29.1"}
mkdocs-jupyter = "^0.25.1"
mkdocs-simple-hooks = "^0.1.5"
mkdocs-material = "^9.6.12"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-html = "^4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
