[tool.poetry]
name = "bmm_multitask_learning"
version = "0.1.0"
description = "algos for multitask learning"
authors = [
  "sem-k32 <kirill.semkin32@mail.ru>",
  "lopate",
  "Akshiira",
  "tmpuser1233"
]
license = "LICENSE"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.3"
pandas = "^2.2.3"
omegaconf = "^2.3.0"
pipe = "^2.2"
lightning = "^2.5.0.post0"
pyro-ppl = "^1.9.1"
tabulate = "^0.9.0"
loguru = "^0.7.3"
dotenv = "^0.9.9"
scipy = "^1.15.2"
torchmetrics = "^1.7.0"
plotly = "^6.0.1"
nbconvert = "^7.16.6"
tensorboard = "^2.19.0"
matplotlib = "^3.10.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
matplotlib = "^3.10.1"
ipykernel = "^6.29.5"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["bmm_multitask"]
force_sort_within_sections = true

[tool.poetry.group.torch.dependencies]
torch = "^2.7.0"


[tool.poetry.group.doc.dependencies]
mkdocstrings = {extras = ["python"], version = "^0.29.1"}
mkdocs-jupyter = "^0.25.1"
mkdocs-material = "^9.6.12"
mkdocs-coverage = "^1.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-html = "^4.1.1"
pytest-cov = "^6.1.1"
coverage = "^7.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
